set height of header to fix background image issue. now there is some whitespace between background and page top.

--- a/omnifood/resources/css/style.css
+++ b/omnifood/resources/css/style.css
@@ -20,4 +20,5 @@ html {
 
 header {
     background-image: url(img/hero.jpg);
+    height: 100vh; /*100% of viewport*/
 }
